[gd_scene load_steps=14 format=3 uid="uid://dq8acyy4u0xct"]

[ext_resource type="Script" uid="uid://d4gr35n32udag" path="res://scripts/placeholder_crop.gd" id="1_pauwt"]
[ext_resource type="Texture2D" uid="uid://bf2y6572yp06x" path="res://assets/crops/growth_stages/carrot_spritesheet.png" id="2_1iseo"]
[ext_resource type="Texture2D" uid="uid://bvjbngnqj123j" path="res://assets/crops/growth_stages/wheat_spritesheet.png" id="2_o6suj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s6sgs"]
atlas = ExtResource("2_1iseo")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag0bd"]
atlas = ExtResource("2_1iseo")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r45ep"]
atlas = ExtResource("2_1iseo")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lremn"]
atlas = ExtResource("2_1iseo")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0aunw"]
atlas = ExtResource("2_o6suj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_17ss8"]
atlas = ExtResource("2_o6suj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjnpl"]
atlas = ExtResource("2_o6suj")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey21h"]
atlas = ExtResource("2_o6suj")
region = Rect2(64, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_apr6d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6sgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag0bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r45ep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lremn")
}],
"loop": true,
"name": &"Carrot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"Ground",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0aunw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17ss8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjnpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey21h")
}],
"loop": true,
"name": &"Wheat",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hy72"]
size = Vector2(64, 64)

[node name="Crop" type="Node2D"]
script = ExtResource("1_pauwt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(296, 568)
sprite_frames = SubResource("SpriteFrames_apr6d")
animation = &"Ground"
offset = Vector2(-296, -568)

[node name="CropButton" type="Button" parent="AnimatedSprite2D"]
visibility_layer = 0
offset_left = -328.0
offset_top = -600.0
offset_right = -264.0
offset_bottom = -536.0

[node name="StaticBody2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_6hy72")

[node name="CropGrowthIncrementTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="pressed" from="AnimatedSprite2D/CropButton" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_entered"]
[connection signal="timeout" from="CropGrowthIncrementTimer" to="." method="_on_timer_timeout"]
